# karaburan

./: .gitignore  AGENTS.md  README.md  implementation-plan.md
.github/rosdep/: karaburan.yaml
.github/workflows/: action.yml
boatcontrol/: boatcontrol.py
docker/: Dockerfile.ros-jazzy-test  ros-test.sh
gpsreader/: README.md  gpsreader.py  rawreader.py
influxdb/: docker-compose.yaml  telegraf.conf
mosquitto/: README.md  docker-compose.yaml
mosquitto/config/: mosquitto.conf
motor_controller/: boat_api_0.1.yaml  boat_vehicle.ino  controller.py  platformio.ini
motor_controller/dummy/: boat_vehicle_dummy.ino
motor_controller/karaburan drive motor/: karaburan-workspace.code-workspace  platformio.ini
motor_controller/karaburan drive motor/src/: main.cpp
mqtt2serial/: mqtt2serial.py
pingreader/: pingreader.py
python/: README.md  boatcontrol.py  gpsreader.md  gpsreader.py  mqtt2serial.py  pingreader.py  requirements.txt  tempreader.md  tempreader.py  udevcreator.py
ros2/src/tempreader/: README.md  package.xml  setup.cfg  setup.py
ros2/src/tempreader/tempreader/: tempreader_node.py
ros_ws/src/: karaburan.urdf  karaburan.xacro
ros_ws/src/boat_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/boat_interfaces/msg/: Waypoints.msg
ros_ws/src/boatcontrol/: package.xml  setup.cfg  setup.py
ros_ws/src/boatcontrol/boatcontrol/: boatcontrolnode.py  simcontrolnode.py
ros_ws/src/boatcontrol/launch/: boatcontrol.launch.py  simcontrol.launch.py
ros_ws/src/bt785/: package.xml  setup.cfg  setup.py
ros_ws/src/bt785/bt785/: bt785_node.py
ros_ws/src/karaburan_msgs/: CMakeLists.txt  package.xml
ros_ws/src/karaburan_msgs/msg/: ElectricalConductivity.msg
ros_ws/src/lidar/: package.xml  setup.py
ros_ws/src/lidar/lidar/: lidar_node.py
ros_ws/src/navigation/: package.xml  setup.py
ros_ws/src/navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  ekf.yaml  karaburan.xacro  karaburan_boat.sdf  navsat.yaml  planner_server.yaml  slam_params.yaml  world.sdf
ros_ws/src/navigation/launch/: boat.launch.py  measurement_instruments.launch.py  nav2_stack.launch.py  sim.launch.py  storage.launch.py
ros_ws/src/navigation/maps/: empty.yml
ros_ws/src/navigation/navigation/: boatnavigator.py  fix_status_override_node.py  launch_arguments.py
ros_ws/src/navigation/test/: test_boatnavigator.py
ros_ws/src/sensorfusion/: package.xml  setup.cfg  setup.py
ros_ws/src/sensorfusion/launch/: sensorfusion.launch.py
ros_ws/src/sensorfusion/sensorfusion/: sensorfusion_node.py
ros_ws/src/sensorfusion/test/: test_pub_error.py  test_sensorfusion.py  test_sensorfusion_node.py
ros_ws/src/sonar/: package.xml  setup.py
ros_ws/src/sonar/sonar/: sonar_node.py
ros_ws/src/tempreader/tempreader/: tempreader_node.py
ros_ws/src/vl53l0x/: package.xml  setup.cfg  setup.py
ros_ws/src/vl53l0x/vl53l0x/: vl53l0x.py
tempreader/: README.md  tempreader.py
