<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt785</name>
  <version>0.0.0</version>
  <description>BT785 EC meter driver</description>
  <maintainer email="bertrik@sikken.nl">Bertrik Sikken</maintainer>
  <license>MIT</license>
  
  <depend>std_msgs</depend>
  <depend>karaburan_msgs</depend>
  <depend>rclcpp</depend>
  <depend>bleak</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
