<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar</name>
  <version>0.0.0</version>
  <description>Wireless sonar sensor driver</description>
  <maintainer email="bertrik@sikken.nl">Bertrik Sikken</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>bleak</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
